hotfix player-list name text-overflow issue

--- a/app/sass/_roster.scss
+++ b/app/sass/_roster.scss
@@ -194,6 +194,8 @@
   .name {
     width: 65%;
     text-indent: 7px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   .shot {
